# doggypile

./: .gitignore  .gitmodules  LICENSE  README.md  dev.mjs  install.sh  package.json
daemon/: .gitignore  Cargo.toml  README.md
daemon/crates/acp-bridge/: CONFORMANCE_STATUS.md  Cargo.toml  README.md
daemon/crates/acp-bridge/src/: acp_client.rs  bridge.rs  config.rs  handlers.rs  lib.rs  main.rs  persistence.rs  pool.rs  streaming.rs  translate.rs  translator.rs
daemon/crates/acp-bridge/tests/: translation_test.rs
daemon/crates/alleycat/: Cargo.toml
daemon/crates/alleycat/src/: agent_manifest.rs  agents.rs  config.rs  host.rs  lib.rs  main.rs  paths.rs  protocol.rs  state.rs  test_support.rs
daemon/crates/alleycat/src/cli/: logs.rs  mod.rs  onboarding.rs  pair.rs  probe.rs  rotate.rs  upgrade.rs
daemon/crates/alleycat/src/daemon/: logging.rs  mod.rs
daemon/crates/alleycat/src/ipc/: mod.rs
daemon/crates/alleycat/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
daemon/crates/amp-bridge/: Cargo.toml
daemon/crates/amp-bridge/src/: bridge.rs  command_exec.rs  index.rs  lib.rs  main.rs  process.rs  state.rs
daemon/crates/amp-bridge/tests/: fake_amp_smoke.rs
daemon/crates/bridge-conformance/: Cargo.toml
daemon/crates/bridge-conformance/src/: cache.rs  diff.rs  lib.rs  method_surface.rs  prereq.rs  scenario.rs  schema.rs  semantics.rs  streaming.rs  transport.rs  upstream_schema.rs
daemon/crates/bridge-conformance/src/targets/: acp.rs  amp.rs  claude.rs  codex.rs  droid.rs  hermes.rs  mod.rs  opencode.rs  pi.rs
daemon/crates/bridge-conformance/tests/: conformance.rs
daemon/crates/bridge-core/: Cargo.toml
daemon/crates/bridge-core/src/: codex_resolver.rs  git_info.rs  launch_environment.rs  thread_index.rs
daemon/crates/bridge-core/src/session/: mod.rs  ring.rs
daemon/crates/bridge-core/tests/: jsonrpc_core.rs  launcher.rs  session_resilience.rs  thread_index.rs
daemon/crates/claude-bridge/: Cargo.toml
daemon/crates/claude-bridge/src/: approval.rs  bridge.rs  lib.rs  main.rs  server.rs  state.rs
daemon/crates/claude-bridge/src/handlers/: command_exec.rs  config.rs  lifecycle.rs  mcp.rs  model.rs  skills.rs  thread.rs  turn.rs
daemon/crates/claude-bridge/src/index/: claude_session_scan.rs  mod.rs
daemon/crates/claude-bridge/src/pool/: mod.rs  process.rs
daemon/crates/claude-bridge/src/translate/: events.rs  input.rs  items.rs
daemon/crates/claude-bridge/tests/: fake_claude_smoke.rs  smoke_binary.rs  smoke_in_process.rs  wire_compat.rs
daemon/crates/claude-bridge/tests/smoke/: README.md  stdio_smoke.sh
daemon/crates/claude-bridge/tests/support/: fake_claude.rs  mod.rs
daemon/crates/claude-remote-control/: Cargo.toml
daemon/crates/claude-remote-control/src/: api.rs  auth.rs  cli.rs  config.rs  credentials.rs  daemon.rs  error.rs  lib.rs  main.rs  manager.rs  runtime.rs  transport.rs  ui.rs  urls.rs  wire.rs
daemon/crates/codex-proto/: Cargo.toml
daemon/crates/codex-proto/src/: account.rs  notifications.rs
daemon/crates/devin-bridge/: Cargo.toml
daemon/crates/devin-bridge/src/: lib.rs
daemon/crates/doggypile/: Cargo.toml  build.rs
daemon/crates/doggypile/src/: agent_manifest.rs  agents.rs  config.rs  framing.rs  host.rs  lib.rs  main.rs  paths.rs  protocol.rs  stream.rs  test_support.rs  web_assets.rs
daemon/crates/doggypile/src/cli/: agents.rs  logs.rs  mod.rs  onboarding.rs  pair.rs  presentation.rs  probe.rs  reload.rs  status.rs  stop.rs  upgrade.rs  web.rs
daemon/crates/doggypile/src/daemon/: control.rs  logging.rs  mod.rs
daemon/crates/doggypile/src/ipc/: mod.rs  unix.rs  windows.rs
daemon/crates/doggypile/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
daemon/crates/droid-bridge/: Cargo.toml
daemon/crates/droid-bridge/src/: bridge.rs  index.rs  lib.rs  main.rs  process.rs  translate.rs
daemon/crates/droid-bridge/tests/: fake_droid_smoke.rs
daemon/crates/droid-bridge/tests/support/: fake_droid.rs
daemon/crates/grok-bridge/: Cargo.toml
daemon/crates/grok-bridge/src/: lib.rs
daemon/crates/hermes-bridge/: Cargo.toml
daemon/crates/hermes-bridge/src/: api_client.rs  bridge.rs  cli_adapter.rs  config.rs  index.rs  lib.rs  main.rs  sse.rs  state.rs
daemon/crates/opencode-bridge/: Cargo.toml
daemon/crates/opencode-bridge/src/: approval.rs  lib.rs  main.rs  opencode_proc.rs  pty.rs  sinks.rs  state.rs
daemon/crates/opencode-bridge/src/handlers/: mod.rs
daemon/crates/opencode-bridge/src/index/: mod.rs
daemon/crates/opencode-bridge/src/opencode_client/: mod.rs
daemon/crates/opencode-bridge/src/sse/: mod.rs
daemon/crates/opencode-bridge/src/translate/: events.rs  input.rs  mod.rs  parts.rs  tool.rs
daemon/crates/opencode-bridge/tests/: fake_opencode_smoke.rs  v10_thread_list_params.rs  v11_model_and_loaded_list.rs  v2_cross_cwd.rs  v3_message_lifecycle.rs  v3_resume.rs  v4_approval.rs  v4_delta_routing.rs  v5_compaction.rs  v5_session_lifecycle.rs  v6_question.rs  v7_tool_call_surfacing.rs  v8_stream_lifecycle.rs  v9_token_usage.rs
daemon/crates/opencode-bridge/tests/support/: mod.rs
daemon/crates/pi-bridge/: Cargo.toml
daemon/crates/pi-bridge/src/: approval.rs  bridge.rs  codex_proto.rs  lib.rs  main.rs  state.rs
daemon/crates/pi-bridge/src/handlers/: command_exec.rs  config.rs  lifecycle.rs  mcp.rs  mod.rs  model.rs  skills.rs  thread.rs  turn.rs
daemon/crates/pi-bridge/src/index/: mod.rs  pi_session_scan.rs  testing.rs
daemon/crates/pi-bridge/src/pool/: mod.rs  pi_protocol.rs  process.rs
daemon/crates/pi-bridge/tests/: codex_proto_wire.rs  fake_pi_smoke.rs  listen_mode_concurrent.rs  v1_codex_smoke.rs  v2_cross_cwd.rs  v3_resume.rs  v4_approval.rs  v5_compaction.rs  v6_thread_list_filter.rs  v7_tool_call_surfacing.rs  v8_live_pi.rs  wire_compat.rs
daemon/crates/shell-bridge/: Cargo.toml
daemon/crates/shell-bridge/src/: bridge.rs  lib.rs  main.rs  session.rs
daemon/crates/shell-bridge/tests/: echo.rs  input.rs  resize.rs
daemon/scripts/: bridge-call.py  pi-bridge-codex-shim.sh
docs/: embedded-web-assets.md  (+1 more)
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+56 files in other folders)
