[package]
name = "alleycat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Iroh-backed daemon that multiplexes local coding agents (Codex, Pi, OpenCode, Claude) onto a single QUIC connection for paired clients."
# Distribution happens via the `kittylitter` wrapper crate in the litter
# repo; this crate is consumed only as a git dep.
publish = false

[lib]
name = "alleycat"
path = "src/lib.rs"

[[bin]]
name = "alleycat"
path = "src/main.rs"

[[bin]]
name = "alleycat-startup"
path = "src/bin/alleycat-startup.rs"

[dependencies]
alleycat-acp-bridge = { workspace = true }
alleycat-amp-bridge = { workspace = true }
alleycat-bridge-core = { workspace = true }
alleycat-claude-bridge = { workspace = true }
alleycat-devin-bridge = { workspace = true }
alleycat-grok-bridge = { workspace = true }
alleycat-droid-bridge = { workspace = true }
alleycat-hermes-bridge = { workspace = true }
alleycat-opencode-bridge = { workspace = true }
alleycat-pi-bridge = { workspace = true }
alleycat-shell-bridge = { workspace = true }
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
clap.workspace = true
directories.workspace = true
fd-lock.workspace = true
futures.workspace = true
hex.workspace = true
hostname.workspace = true
iroh.workspace = true
qrcodegen = "1"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[dev-dependencies]
tempfile.workspace = true
