[package]
name = "doggypile-devin-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Devin-specific bridge: wraps the generic ACP bridge but overrides thread/list to read directly from devin's local SQLite store (~/.local/share/devin/cli/sessions.db)."
publish = false

[dependencies]
doggypile-acp-bridge = { workspace = true }
doggypile-bridge-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
