[package]
name = "doggypile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Single-binary daemon and embedded PWA for chatting with Codex from your phone over iroh."
publish = false

[lib]
name = "doggypile"
path = "src/lib.rs"

[[bin]]
name = "doggypile"
path = "src/main.rs"

[[bin]]
name = "doggypile-startup"
path = "src/bin/doggypile-startup.rs"

[dependencies]
doggypile-acp-bridge = { workspace = true }
doggypile-amp-bridge = { workspace = true }
doggypile-bridge-core = { workspace = true }
doggypile-claude-bridge = { workspace = true }
doggypile-devin-bridge = { workspace = true }
doggypile-grok-bridge = { workspace = true }
doggypile-droid-bridge = { workspace = true }
doggypile-hermes-bridge = { workspace = true }
doggypile-opencode-bridge = { workspace = true }
doggypile-pi-bridge = { workspace = true }
doggypile-shell-bridge = { workspace = true }
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
clap.workspace = true
directories.workspace = true
fd-lock.workspace = true
futures.workspace = true
hex.workspace = true
hostname.workspace = true
iroh.workspace = true
qrcodegen = "1"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[dev-dependencies]
tempfile.workspace = true
