[package]
name = "alleycat-grok-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Grok-specific bridge: wraps the generic ACP bridge but overrides thread/list to read directly from grok's local SQLite store (path TBD after inspecting grok CLI data dir). Keeps grok-aware logic out of acp-bridge."
publish = false

[dependencies]
alleycat-acp-bridge = { workspace = true }
alleycat-bridge-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
