[package]
name = "doggypile-shell-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "PTY-backed shell bridge for Doggypile JSON-RPC clients."
publish = false

[lib]
name = "doggypile_shell_bridge"
path = "src/lib.rs"

[[bin]]
name = "doggypile-shell-bridge"
path = "src/main.rs"

[dependencies]
doggypile-bridge-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

